# VanillaGP

./: CMakeLists.txt  ConstantNode.xml  README.md
GeneratorFiles/: AddNode.xml  AlgorithmLoader.xml  BinaryNode.xml  DNAInitializer.xml  EuclidEvaluator.xml  EvalFactory.xml  EvaluatorBase.xml  ExpressionTree.xml  InitializerBase.xml  InvertNode.xml  LeafNode.xml  MonoNode.xml  MultiplyNode.xml  NegateNode.xml  NodeBase.xml  NodeFactory.xml  ParameterNode.xml  Population.xml  PowerNode.xml  Problem.xml  RandomInitializer.xml  SolutionBase.xml  SolutionFactoryBase.xml  TreeFactory.xml  TreeProperties.xml  TreeRenderer.xml
MathExpLib/: AddNode.cpp  AddNode.h  BinaryNode.h  CMakeLists.txt  ConstantNode.cpp  ConstantNode.h  ExpressionTree.cpp  ExpressionTree.h  InvertNode.cpp  InvertNode.h  LeafNode.h  MonoNode.h  MultiplyNode.cpp  MultiplyNode.h  NegateNode.cpp  NegateNode.h  NodeBase.h  NodeFactory.cpp  NodeFactory.h  ParameterNode.cpp  ParameterNode.h  PowerNode.cpp  PowerNode.h  TreeCalculator.cpp  TreeCalculator.h  TreeFactory.cpp  TreeFactory.h  TreeProperties.h  TreeRenderer.cpp  TreeRenderer.h
MathExpTests/: CMakeLists.txt
MathExpTests/Tests/: AddNode_Tests.cpp  ConstantNode_Tests.cpp  InvertNode_Tests.cpp  MultiplyNode_Tests.cpp  NegateNode_Tests.cpp  NodeFactory_Tests.cpp  ParameterNode_Tests.cpp  Population_Tests.cpp  PowerNode_Tests.cpp  TreeCalculator_Tests.cpp  TreeFactory_Tests.cpp  TreeRenderer_Tests.cpp
Notes/: Observation-20221231.md
Resources/: config.xml
Resources/Input/: 2C2DFCBBB98241BD9177CB878B6EEA6.arff  8B3FB11BE3E4FD39E8DF41D83E24D2F.arff  BE397E46418640286353CE6726DB4FF.arff  DABD7E8B13424A2BA6D03452CB6D8EE7.arff
VanillaGP/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
VanillaGP/Helpers/: GrammarFinder.h
VanillaGPLib/: AlgorithmLoader.cpp  AlgorithmLoader.h  CMakeLists.txt  CodeDash.cpp  CodeDash.h  Population.cpp  Population.h  ProblemLoader.cpp  ProblemLoader.h  Socket.cpp  Socket.h
VanillaGPLib/EvalEngine/: EuclidEvaluator.cpp  EuclidEvaluator.h  EvalFactory.h  EvaluatorBase.h
VanillaGPLib/GrammarBase/: CalculatorBase.h  DNAInitializer.cpp  DNAInitializer.h  InitializerBase.h  RandomInitializer.cpp  RandomInitializer.h  RendererBase.h  Solution.h  SolutionBase.h  SolutionFactoryBase.h
VanillaGPTests/: CMakeLists.txt
VanillaGPTests/Tests/: AlgorithmLoader_Tests.cpp  CodeDash_Tests.cpp  DNAInitializer_Tests.cpp  EuclidEvaluator_Tests.cpp  Example_Tests.cpp  Population_Tests.cpp  ProblemLoader_Tests.cpp  RandomInitializer_Tests.cpp
